<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.a10acasa.MainActivity">

    <TextView
        android:id="@+id/appNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_weight="0"
        android:fontFamily="sans-serif-medium"
        android:padding="8dp"
        android:text="@string/tAppName"
        android:textColor="@color/colorLogoFont"
        android:textSize="36sp" />

    <View
        android:id="@+id/separatorView"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_weight="0"
        android:background="@color/colorBackground" />

    <ImageView
        android:id="@+id/mainBackgroundImage"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scaleType="centerCrop"
        android:src="@drawable/acasa" />

    <TextView
        android:id="@+id/aboutText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@color/colorBackground"
        android:paddingBottom="4dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="4dp"
        android:text="@string/tAbout"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/addressMainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:padding="2dp">

        <ImageView
            android:id="@+id/iconAddressImage"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="0"
            android:src="@drawable/locationicon" />

        <LinearLayout
            android:id="@+id/addressSecondaryLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="vertical">

            <TextView
                android:id="@+id/addressText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:onClick="showAddressInMaps"
                android:text="@string/tAddress" />

            <TextView
                android:id="@+id/InfoOpenMapText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="top"
                android:onClick="showAddressInMaps"
                android:text="@string/tInfoOpenMap"
                android:textColor="@color/colorTextInfoOpenMap" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/hoursLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:padding="2dp">

        <ImageView
            android:id="@+id/iconOpeningImage"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="0"
            android:src="@drawable/hoursicon" />

        <TextView
            android:id="@+id/hoursText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:text="@string/tHours" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/telephoneLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:padding="2dp">

        <ImageView
            android:id="@+id/iconPhoneImage"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="0"
            android:src="@drawable/telephoneicon" />

        <TextView
            android:id="@+id/telephoneText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:autoLink="phone"
            android:text="@string/tTelephone" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/emailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:padding="2dp">

        <ImageView
            android:id="@+id/iconEmailImage"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="0"
            android:src="@drawable/emailicon" />

        <TextView
            android:id="@+id/emailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:autoLink="email"
            android:text="@string/tEmail" />

    </LinearLayout>

</LinearLayout>
